--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/Context/b2bState.jsx", "app/Context/b2bContext.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/Context/b2bState.jsx", "app/Context/b2bContext.jsx", "app/b2b/Header.tsx"],
   "exclude": ["node_modules"]
 }
